--- a/dc.crsorgi.goov.info/verifycertificate7592.html
+++ b/dc.crsorgi.goov.info/verifycertificate7592.html
@@ -644,7 +644,7 @@ display:none;
   
               <tr>
 			  <td>Place of Birth</td>
-              <td style="text-transform:uppercase">DPAHLEZA SHAHPUR DIYARA</td>
+              <td style="text-transform:uppercase">PAHLEZA SHAHPUR DIYARA</td>
             
             </tr>
 
